--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: black;
+    
 }
 
 header{
@@ -15,20 +16,43 @@ button#add-book{
     padding: 16px 20px;
     border: none;
     cursor: pointer;
+    margin-right: 2px;
 }
 
 .form-popup {
-    border: 3px solid #f1f1f1;
     display: none;
+    position: fixed;
+    left: 45%;
+    top: 5%;
+    transform: translate(-45%, 15%);
+    border: 3px solid #999999;
+    z-index: 9;
+}
+
+.book-form{
+    max-width: 300px;
+    padding: 50px;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.book-form input{
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 20px 0;
+    border: none;
+    background: #eee;
 }
 
 
-
 #book-shelf{
+    margin-top: 20px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: auto;
-    grid-gap: 1rem;
+    grid-gap: 2rem;
 }
 
 #book-card{
@@ -36,4 +60,27 @@ button#add-book{
     border-radius: 4px;
     padding: .5rem;
     background-color: blanchedalmond;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
 }
+.loginPopup {
+    position: relative;
+    text-align: center;
+    width: 100%;
+  }
+
+#overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+  }
