--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header{
     align-items: center;
 }
 
-button#add-book{
+button#add-book-button{
     background-color: #555;
     color: white;
     padding: 16px 20px;
